--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-################### DataSource Configuration ##########################
+#--datasource configurations--#
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -7,8 +7,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
-
-################### Hibernate Configuration ##########################
+#--hibernate configurations--#
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
